Code smells corrections